use valueOf instead of new Integer